[package]
name = "io_terra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
# Actix Web for creating web server
actix-web = "4.0.0-beta.8"
# Actix WebSocket dependencies
actix-rt = "2.2"
actix-web-actors = "4.0.0-beta.8"
# Serde for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing dependencies
[dev-dependencies]
actix-test = "0.1.2"
